@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -382,8 +382,8 @@ public ClassDescriptor buildPowerSupplyUnitClassDescriptor() {
     onMapping.setFieldName("on->DIRECT");
     ObjectTypeConverter onMappingConverter = new ObjectTypeConverter();
     onMappingConverter.setDefaultAttributeValue(new java.lang.Boolean("false"));
-    onMappingConverter.addConversionValue(new Character('F'), new java.lang.Boolean("false"));
-    onMappingConverter.addConversionValue(new Character('T'), new java.lang.Boolean("true"));
+    onMappingConverter.addConversionValue(Character.valueOf('F'), new java.lang.Boolean("false"));
+    onMappingConverter.addConversionValue(Character.valueOf('T'), new java.lang.Boolean("true"));
     onMapping.setConverter(onMappingConverter);
     descriptor.addMapping(onMapping);
 
