@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -226,7 +226,7 @@ public class ForeignKeyTestSuite extends JUnitTestCase {
             organizer.setRace(race);
 
             Responsibility responsibility = new Responsibility();
-            responsibility.setUniqueIdentifier(new Long(System.currentTimeMillis()));
+            responsibility.setUniqueIdentifier(Long.valueOf(System.currentTimeMillis()));
             responsibility.setDescription("Raise funds");
 
             race.addOrganizer(organizer, responsibility);
